# posix-ipc

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  compile_commands.json  main.cpp  main.plist
.github/workflows/: blank.yml
src/: calculator.cpp  main.cpp
tests/: test_calculator.cpp
